update description